2015-02-10  Simon George  <S.George@rhul.ac.uk>

	* Add Error, Status and Fibre classes
	* Move BlockTypes from Helpers to own file
	* Updated unit tests & references
	* L1TopoRDO-00-00-04

2015-01-27  Simon George  <s.george@rhul.ac.uk>

	* src/Helpers.cxx: remove debug printout to stdout

	* share/L1TopoRDO_test.ref: updated unit test references

	* src/L1TopoRDO.cxx;L1TopoRDO/L1TopoRDO.h: initialise m_sourceID
	to zero and remove m_versionNumber; add dump method for use by
	RoIBResult via L1TopoResult.

	* L1TopoRDO-00-00-03

2015-01-26  Simon George  <s.george@rhul.ac.uk>

	* src/Helpers.cxx,.h:
	triggerBitIndex changed to match new understanding of hardware, i.e.
	index = 64*module + 32*c.fpga() + 16*c.clock() + 8*c.index();
	(fpga and clock were previously the other way around).
	* test/L1TopoRDO_test.cxx (test9): update unit test to match this

	* L1TopoRDO-00-00-02

2015-01-26  Simon George  <s.george@rhul.ac.uk>

	* Package created
	* L1TopoRDO-00-00-01

